#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT([hello_world], 1.0, [nobody@nowhere.com])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src/hello.c])
AC_CONFIG_FILES([Makefile
				 src/Makefile])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC

AC_OUTPUT
